--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 23:05:22 2018</p>
+         Last Run: Wed Jul 11 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>30</td>
                         <td>4</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>21</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,27 +46,27 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>26</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>51</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
@@ -74,19 +74,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>32</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>40</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>20</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -206,7 +206,7 @@
                  "0",
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
                  "30",
-                 "30",
+                 "29",
+                 "29",
                  "32",
                  "40"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "26",
-                 "51",
-                 "32",
-                 "20"
+                 "19",
+                 "23",
+                 "23",
+                 "15",
+                 "8"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 23:05:22 2018</p>
+         Last Run: Wed Jul 11 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,63 +268,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>9</td>
-                        <td>72</td>
+                        <td>Chance of Rain</td>
+                        <td>11</td>
+                        <td>11</td>
+                        <td>34</td>
+                        <td>75</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>83</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>15</td>
-                        <td>64</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>24</td>
+                        <td>67</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>63</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>9</td>
-                        <td>57</td>
-                        <td>6</td>
+                        <td>Mostly Cloudy</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>16</td>
+                        <td>59</td>
+                        <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>48</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>10</td>
-                        <td>54</td>
-                        <td>7</td>
-                        <td>13</td>
+                        <td>12</td>
+                        <td>55</td>
+                        <td>6</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>35</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
                         <td>11</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>6</td>
-                        <td>14</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>53</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -370,9 +370,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "11",
                  "12",
                  "13",
-                 "14",
                  "15",
                  "16"
                ]
@@ -383,9 +383,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "11",
                  "12",
                  "13",
-                 "14",
                  "15",
                  "16"
                ]
@@ -440,10 +440,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "15",
-                 "9",
-                 "10",
+                 "34",
+                 "24",
+                 "16",
+                 "12",
                  "11"
                ]
              },
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "64",
-                 "57",
-                 "54",
-                 "51"
+                 "75",
+                 "67",
+                 "59",
+                 "55",
+                 "49"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "63",
-                 "48",
-                 "35",
-                 "53"
+                 "87",
+                 "72",
+                 "61",
+                 "58",
+                 "65"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 23:05:22 2018</p>
+         Last Run: Wed Jul 11 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SW</td>
@@ -519,8 +519,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>45</td>
                         <td>3</td>
@@ -549,7 +549,7 @@
                         <td>35</td>
                         <td>6</td>
                         <td>13</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -560,7 +560,7 @@
                         <td>0</td>
                         <td>33</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
                         <td>5</td>
                      </tr>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -690,7 +690,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "54",
                  "45",
                  "40",
                  "35",
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 23:05:22 2018</p>
+         Last Run: Wed Jul 11 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
