--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 00:05:22 2018</p>
+         Last Run: Wed Jul 11 01:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>30</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>19</td>
+                        <td>SSE</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -84,7 +84,7 @@
                         <td>0</td>
                         <td>40</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>8</td>
                      </tr>
@@ -215,7 +215,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "29",
+                 "30",
                  "29",
                  "32",
                  "40"
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "23",
-                 "23",
-                 "15",
+                 "18",
+                 "22",
+                 "21",
+                 "13",
                  "8"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 00:05:22 2018</p>
+         Last Run: Wed Jul 11 01:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 00:05:22 2018</p>
+         Last Run: Wed Jul 11 01:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 00:05:22 2018</p>
+         Last Run: Wed Jul 11 01:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
