--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 02:05:17 2018</p>
+         Last Run: Wed Jul 11 03:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -50,7 +50,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -227,8 +227,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "16",
+                 "16",
                  "17",
-                 "18",
                  "12",
                  "8"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 02:05:17 2018</p>
+         Last Run: Wed Jul 11 03:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,8 +271,8 @@
                         <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>33</td>
-                        <td>76</td>
+                        <td>34</td>
+                        <td>75</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NW</td>
@@ -284,7 +284,7 @@
                         <td>12</td>
                         <td>12</td>
                         <td>24</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -308,7 +308,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>12</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>4</td>
                         <td>13</td>
                         <td>NNW</td>
@@ -440,7 +440,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
+                 "34",
                  "24",
                  "16",
                  "12",
@@ -452,10 +452,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "65",
+                 "75",
+                 "64",
                  "54",
-                 "49",
+                 "48",
                  "42"
                ]
              },
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 02:05:17 2018</p>
+         Last Run: Wed Jul 11 03:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 02:05:17 2018</p>
+         Last Run: Wed Jul 11 03:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -745,38 +745,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>0</td>
                         <td>23</td>
+                        <td>23</td>
+                        <td>0</td>
+                        <td>29</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>SE</td>
                         <td>16</td>
+                        <td>ENE</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>33</td>
                         <td>1</td>
+                        <td>18</td>
+                        <td>ENE</td>
                         <td>16</td>
-                        <td>ESE</td>
-                        <td>15</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>ESE</td>
-                        <td>14</td>
+                        <td>E</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -820,9 +820,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
-                 "26",
-                 "24"
+                 "23",
+                 "22",
+                 "21"
                ]
              },
              {
@@ -831,9 +831,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
-                 "26",
-                 "24"
+                 "23",
+                 "22",
+                 "21"
                ]
              }
            ]
@@ -894,9 +894,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "23",
-                 "26",
-                 "32"
+                 "29",
+                 "33",
+                 "38"
                ]
              },
              {
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "21",
                  "16",
-                 "15",
-                 "14"
+                 "12"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 02:05:17 2018</p>
+         Last Run: Wed Jul 11 03:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -952,7 +952,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>21</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -964,7 +964,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>19</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -976,7 +976,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>S</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "19",
-                 "17"
+                 "18",
+                 "16",
+                 "15"
                ]
              }
            ]
