--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 05:05:04 2018</p>
+         Last Run: Wed Jul 11 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>17</td>
+                        <td>SSE</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,10 +70,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SE</td>
+                        <td>SSE</td>
                         <td>11</td>
                      </tr>
                      <tr>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,7 +134,7 @@
                "data":[
                  "26",
                  "26",
-                 "26",
+                 "25",
                  "24",
                  "22"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "26",
                  "26",
-                 "26",
+                 "25",
                  "24",
                  "22"
                ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "31",
                  "30",
-                 "30",
-                 "30",
-                 "32",
-                 "40"
+                 "29",
+                 "33",
+                 "41"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "15",
                  "16",
-                 "16",
-                 "17",
+                 "15",
                  "11",
-                 "8"
+                 "7"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 05:05:04 2018</p>
+         Last Run: Wed Jul 11 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,60 +271,60 @@
                         <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>34</td>
+                        <td>49</td>
                         <td>76</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>78</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>24</td>
+                        <td>43</td>
                         <td>65</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>90</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>16</td>
-                        <td>53</td>
+                        <td>24</td>
+                        <td>54</td>
                         <td>3</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>12</td>
-                        <td>48</td>
+                        <td>Overcast</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>7</td>
+                        <td>50</td>
                         <td>4</td>
                         <td>13</td>
-                        <td>NNW</td>
-                        <td>75</td>
+                        <td>NW</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>11</td>
-                        <td>42</td>
-                        <td>6</td>
+                        <td>Mostly Cloudy</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>7</td>
+                        <td>45</td>
+                        <td>5</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>57</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -373,8 +373,8 @@
                  "11",
                  "12",
                  "14",
-                 "16",
-                 "17"
+                 "15",
+                 "16"
                ]
              },
              {
@@ -386,8 +386,8 @@
                  "11",
                  "12",
                  "14",
-                 "16",
-                 "17"
+                 "15",
+                 "16"
                ]
              }
            ]
@@ -440,11 +440,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
+                 "49",
+                 "43",
                  "24",
-                 "16",
-                 "12",
-                 "11"
+                 "7",
+                 "7"
                ]
              },
              {
@@ -454,9 +454,9 @@
                "data":[
                  "76",
                  "65",
-                 "53",
-                 "48",
-                 "42"
+                 "54",
+                 "50",
+                 "45"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "90",
+                 "80",
                  "92",
-                 "75",
-                 "57"
+                 "94",
+                 "86",
+                 "78"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 05:05:04 2018</p>
+         Last Run: Wed Jul 11 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -519,8 +519,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>46</td>
                         <td>3</td>
@@ -534,11 +534,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -549,7 +549,7 @@
                         <td>36</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>5</td>
                      </tr>
                      <tr>
@@ -561,7 +561,7 @@
                         <td>34</td>
                         <td>7</td>
                         <td>13</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>6</td>
                      </tr>
                   </tbody>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -692,7 +692,7 @@
                "data":[
                  "53",
                  "46",
-                 "40",
+                 "41",
                  "36",
                  "34"
                ]
@@ -704,7 +704,7 @@
                "data":[
                  "3",
                  "4",
-                 "4",
+                 "5",
                  "5",
                  "6"
                ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 05:05:04 2018</p>
+         Last Run: Wed Jul 11 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 05:05:04 2018</p>
+         Last Run: Wed Jul 11 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -952,7 +952,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -964,7 +964,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "11",
                  "10",
-                 "9",
                  "8"
                ]
              }
