--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 08:05:21 2018</p>
+         Last Run: Thu Jul 12 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>27</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>21</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -84,9 +84,9 @@
                         <td>1</td>
                         <td>43</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SE</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,7 +216,7 @@
                "data":[
                  "36",
                  "35",
-                 "34",
+                 "33",
                  "37",
                  "43"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "24",
+                 "26",
+                 "23",
+                 "18",
                  "19",
-                 "21",
-                 "23"
+                 "22"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 08:05:21 2018</p>
+         Last Run: Thu Jul 12 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -274,17 +274,17 @@
                         <td>6</td>
                         <td>70</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>3</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -293,10 +293,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -308,7 +308,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -317,10 +317,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>40</td>
+                        <td>38</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -371,10 +371,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "12",
-                 "13",
-                 "15",
+                 "14",
+                 "16",
                  "17",
-                 "18"
+                 "19"
                ]
              },
              {
@@ -384,10 +384,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "12",
-                 "13",
-                 "15",
+                 "14",
+                 "16",
                  "17",
-                 "18"
+                 "19"
                ]
              }
            ]
@@ -453,10 +453,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "61",
-                 "51",
-                 "44",
-                 "40"
+                 "60",
+                 "50",
+                 "43",
+                 "38"
                ]
              },
              {
@@ -464,7 +464,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
+                 "64",
                  "67",
                  "65",
                  "56",
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 08:05:21 2018</p>
+         Last Run: Thu Jul 12 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -507,8 +507,8 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
                         <td>54</td>
                         <td>2</td>
@@ -526,15 +526,15 @@
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -550,7 +550,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,11 +558,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -608,9 +608,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
+                 "15",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -621,9 +621,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
+                 "15",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -692,9 +692,9 @@
                "data":[
                  "54",
                  "47",
-                 "43",
+                 "42",
                  "39",
-                 "36"
+                 "35"
                ]
              },
              {
@@ -703,10 +703,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "4",
+                 "5",
                  "11",
-                 "14",
-                 "14"
+                 "15",
+                 "15"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 08:05:21 2018</p>
+         Last Run: Thu Jul 12 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,7 +748,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -762,9 +762,9 @@
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SE</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -775,7 +775,7 @@
                         <td>35</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>23</td>
                      </tr>
                   </tbody>
@@ -894,7 +894,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "27",
                  "30",
                  "35"
                ]
@@ -905,7 +905,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "17",
+                 "18",
                  "23"
                ]
              }
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 08:05:21 2018</p>
+         Last Run: Thu Jul 12 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -971,7 +971,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>50</td>
                         <td>0</td>
                         <td>14</td>
@@ -1086,7 +1086,7 @@
                "data":[
                  "24",
                  "24",
-                 "41"
+                 "40"
                ]
              },
              {
