--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 19:05:20 2018</p>
+         Last Run: Thu Jul 12 20:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>0</td>
-                        <td>35</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>SE</td>
-                        <td>19</td>
-                     </tr>
-                     <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>15</td>
+                        <td>ESE</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -93,7 +80,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
                  "23"
                ]
              },
@@ -103,7 +89,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
                  "23"
                ]
              }
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -154,7 +138,6 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "41"
+                 "39"
                ]
              },
              {
@@ -172,8 +154,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "15"
+                 "16"
                ]
              }
            ]
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 19:05:20 2018</p>
+         Last Run: Thu Jul 12 20:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 19:05:20 2018</p>
+         Last Run: Thu Jul 12 20:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -454,7 +435,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -466,7 +447,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
@@ -478,7 +459,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -490,7 +471,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -506,7 +487,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -634,10 +615,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "45",
-                 "41",
-                 "37",
+                 "54",
+                 "46",
+                 "42",
+                 "38",
                  "35"
                ]
              },
@@ -650,7 +631,7 @@
                  "5",
                  "11",
                  "14",
-                 "12"
+                 "11"
                ]
              }
            ]
@@ -667,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 19:05:20 2018</p>
+         Last Run: Thu Jul 12 20:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -696,7 +677,7 @@
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -720,7 +701,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -848,9 +829,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "0",
                  "1",
-                 "1",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -867,7 +848,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 19:05:20 2018</p>
+         Last Run: Thu Jul 12 20:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
