--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 22:05:17 2018</p>
+         Last Run: Thu Jul 12 23:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -47,7 +47,7 @@
                         <td>14</td>
                         <td>2</td>
                         <td>56</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>13</td>
                         <td>NNW</td>
                         <td>42</td>
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 22:05:17 2018</p>
+         Last Run: Thu Jul 12 23:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -284,21 +284,21 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>42</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>13</td>
                      </tr>
@@ -308,9 +308,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>12</td>
                      </tr>
@@ -320,10 +320,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>SE</td>
+                        <td>SSE</td>
                         <td>11</td>
                      </tr>
                   </tbody>
@@ -372,7 +372,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -385,7 +385,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "46",
+                 "52",
+                 "45",
                  "42",
-                 "37",
-                 "35"
+                 "38",
+                 "36"
                ]
              },
              {
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 22:05:17 2018</p>
+         Last Run: Thu Jul 12 23:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,9 +510,9 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -522,7 +522,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -534,7 +534,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
@@ -656,9 +656,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "24",
-                 "27",
-                 "32"
+                 "25",
+                 "28",
+                 "33"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 22:05:17 2018</p>
+         Last Run: Thu Jul 12 23:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
